--- a/vignettes/greedyBAPs.Rmd
+++ b/vignettes/greedyBAPs.Rmd
@@ -78,7 +78,7 @@ data <- matrix(rnorm(n * p), n, p)
 ```{r, fig.show='hold'}
 set.seed(1)
 bap <- generateUniformBAP(p = 4, N = 1)[[1]]
-params <- generateBAPPArameters(bap)
+params <- generateBAPParameters(bap)
 data <- generateData(n = 100, params = params)
 plotBAP(bap)
 pairs(data)
